--- a/rsrc/init.config
+++ b/rsrc/init.config
@@ -1,3 +1,8 @@
 config {
-  load_status=["status"] //all status files
+  trigger_types=[
+		"enter", "exit", "bump", "atop", "fall_onto", "fall_through",
+		"chomp", "tug_left", "tug_right", "tug_back",
+		"timer" //every X seconds
+	]
+	load_status=["status"] //all status files
 }
