--- a/rsrc/init.config
+++ b/rsrc/init.config
@@ -1,8 +1,10 @@
 config {
-  trigger_types=[
-		"enter", "exit", "bump", "atop", "fall_onto", "fall_through",
-		"chomp", "tug_left", "tug_right", "tug_back",
-		"timer" //every X seconds
+  trigger_types=[ 
+		//add any non-predefined trigger types.
+		//predefined types are as follows:
+		//"on_enter", "on_exit", "on_bump", "on_atop", "on_fall_onto", "on_fall_through",
+		//"on_chomp", "on_unchomp", "on_tug_left", "on_tug_right", "on_tug_back",
+		//"on_timer" //every N seconds
 	]
-	load_status=["status"] //all status files
+	load_status=["salamander"] //all status files
 }
