--- a/rsrc/init.config
+++ b/rsrc/init.config
@@ -6,5 +6,9 @@ config {
 		//"on_chomp", "on_unchomp", "on_tug_left", "on_tug_right", "on_tug_back",
 		//"on_timer" //every N seconds
 	]*/
+	move_flags=[ //"normal" is always defined.
+		"wet",
+		"ghost"
+	]
 	load_status=["salamander"] //all status files
 }
