--- a/rsrc/init.config
+++ b/rsrc/init.config
@@ -2,7 +2,7 @@ config {
   /*trigger_types=[ 
 		//add any non-predefined trigger types.
 		//predefined types are as follows:
-		//"on_enter", "on_exit", "on_bump", "on_atop", "on_fall_onto", "on_fall_through",
+		//"on_enter", "on_exit", "on_inside", "on_bump", "on_atop", "on_fall_onto", "on_fall_through",
 		//"on_chomp", "on_unchomp", "on_tug_left", "on_tug_right", "on_tug_back",
 		//"on_timer" //every N seconds
 	]*/
