Support for moving between maps. Fixes to Comparisons. Weight variable check. Vertical slice complete.

--- a/osx/makefile
+++ b/osx/makefile
@@ -13,10 +13,12 @@ C_OBJS=\
 	$(TMPDIR)/action/check.o \
 	$(TMPDIR)/action/comparison.o \
 	$(TMPDIR)/action/condition.o \
+	$(TMPDIR)/action/effect_change_map.o \
 	$(TMPDIR)/action/effect_feed.o \
 	$(TMPDIR)/action/effect_grab.o \
 	$(TMPDIR)/action/effect_grantrevoke.o \
 	$(TMPDIR)/action/effect_let_go.o \
+	$(TMPDIR)/action/effect_place_object.o \
 	$(TMPDIR)/action/effect_pick_up.o \
 	$(TMPDIR)/action/effect_put_down.o \
 	$(TMPDIR)/action/effect_set.o \
@@ -46,10 +48,12 @@ HEADERS=\
 	$(INCDIR)/action/check.h \
 	$(INCDIR)/action/comparison.h \
 	$(INCDIR)/action/condition.h \
+	$(INCDIR)/action/effect_change_map.h \
 	$(INCDIR)/action/effect_feed.h \
 	$(INCDIR)/action/effect_grab.h \
 	$(INCDIR)/action/effect_grantrevoke.h \
 	$(INCDIR)/action/effect_let_go.h \
+	$(INCDIR)/action/effect_place_object.h \
 	$(INCDIR)/action/effect_pick_up.h \
 	$(INCDIR)/action/effect_put_down.h \
 	$(INCDIR)/action/effect_message.h \
